add calling card

--- a/projects/name-card/name-card.html
+++ b/projects/name-card/name-card.html
@@ -20,34 +20,39 @@
 
 <body>
 
-    <div class="info-card-container">
+    <div class="info-card">
 
-        <div class="info-card">
+        <div class="imageContainer">
 
-            <div class="info-card__image-exposure info-card__content">
+            <div class="mainImage"></div>
 
-                <div class="info-card__image-exposure--blend"></div>
-
-                <div class="info-card__image-exposure__item"></div>
-
-            </div>
-
-            <div class="info-card__bio info-card__content">
-
-                <h2 class="info-card__bio--title">The Earth</h2>
-
-                <p class="info-card__bio--copy">John Roger Stephens (born December 28, 1978), better
-                    known by his stage name John Legend, is an American
-                    singer, songwriter and actor. He has won ten Grammy
-                    Awards, one Golden Globe, and one Academy Award. In
-                    2007, Legend received the Hal David Starlight Award
-                    from the Songwriters Hall of Fame.</p>
-
-            </div>
-
-            <span class="close"></span>
+            <div class="blendInImage"></div>
 
         </div>
+
+        <div class="cardContainer">
+
+            <h2 class="title">The Earth</h2>
+
+            <p class="copy">
+                Earth is the third planet from the Sun, the densest planet in the Solar System, the largest of the Solar System's four terrestrial planets, and the only astronomical object known to harbor life.<br /><br />
+                Orbital characteristics<br />
+                Radius: 6,371 km<br />
+                Distance from Sun: 149.6 million km<br />
+                Mass: 5.972 × 10^24 kg<br />
+                Age: 4.543 billion years<br />
+                Area: 510.1 million km²<br />
+                Population: 7.125 billion (2013)<br /><br />
+                by <a href="http://www.dennisxiao.com/" target="_blank">Dennis Xiao</a>
+
+            </p>
+
+
+
+        </div>
+
+        <!-- the close button -->
+        <span class="close" onclick="alert('Hmm... just keep me open bro!');"></span>
 
     </div>
 
