add csu-homepage project and fixed a couple of other minor bugs

--- a/projects/fixed-bg-ldp/fixed-bg-ldp.html
+++ b/projects/fixed-bg-ldp/fixed-bg-ldp.html
@@ -18,6 +18,10 @@
     <!-- Mobile CSS by Dennis -->
     <link rel="stylesheet" type="text/css" href="./mystyle.css">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
+
     <title>Landing Page Practice</title>
 
 </head>
