--- a/projects/name-card/name-card.html
+++ b/projects/name-card/name-card.html
@@ -14,6 +14,10 @@
     <!-- CSS by Dennis -->
     <link rel="stylesheet" type="text/css" href="./mystyle.css">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
+
     <title>The Earth</title>
 
 </head>
@@ -36,7 +40,6 @@
 
             <p class="copy">
                 Earth is the third planet from the Sun, the densest planet in the Solar System, the largest of the Solar System's four terrestrial planets, and the only astronomical object known to harbor life.<br /><br />
-                Orbital characteristics<br />
                 Radius: 6,371 km<br />
                 Distance from Sun: 149.6 million km<br />
                 Mass: 5.972 × 10^24 kg<br />
@@ -46,8 +49,6 @@
                 by <a href="http://www.dennisxiao.com/" target="_blank">Dennis Xiao</a>
 
             </p>
-
-
 
         </div>
 
