--- a/projects/jane/jane.html
+++ b/projects/jane/jane.html
@@ -23,6 +23,10 @@
     <!-- JS by Dennis -->
     <script src="./myscripts.js"></script>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
+
     <title>Thank you so much, Jane!</title>
 
 </head>
