--- a/projects/porfolio/dennisxiao.html
+++ b/projects/porfolio/dennisxiao.html
@@ -35,6 +35,10 @@
     <!-- JS by Dennis -->
     <script src="./myscripts.js"></script>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
+
     <title>Dennis Xiao Profolio</title>
 
 </head>
