--- a/projects/quote/quoteoftheday.html
+++ b/projects/quote/quoteoftheday.html
@@ -35,6 +35,10 @@
     <!-- JS by Dennis -->
     <script src="./myscripts.js"></script>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
+
     <title>Quote of The Day</title>
 
 </head>
