--- a/projects/weather/weather.html
+++ b/projects/weather/weather.html
@@ -38,6 +38,10 @@
     <!-- JS by Dennis -->
     <script src="./myscripts.js"></script>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
+
     <title>Dennis Weather Report</title>
 
 </head>
