--- a/projects/jane/jane.html
+++ b/projects/jane/jane.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="./mystyle.css">
 
     <!-- jQuery -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
     <script src="./jquery.min.js"></script>
 
     <!-- JS by Dennis -->
