--- a/projects/porfolio/dennisxiao.html
+++ b/projects/porfolio/dennisxiao.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="./mystyle.css">
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
     <!-- jQuery Easing Plugin -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
@@ -34,10 +34,6 @@
 
     <!-- JS by Dennis -->
     <script src="./myscripts.js"></script>
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
 
     <title>Dennis Xiao Profolio</title>
 
@@ -75,108 +71,109 @@
                 <li><a href="#contact" class="scrollable">Contact</a></li>
             </ul>
         </nav>
-    </div>
+    </div> <!-- end of container -->
+
 </header>
 
 <a id="top" name="home"></a>
 
 <body>
 
-    <main>
-        <!-- self-introduction section -->
-        <header>
-            <div class="intro-text">
-                <p>I'm Dennix Xiao, an enthusiastic coder with extensive practical experience in web development, product
-                    management and project management; devoted to Imperative Programming and Information Architecture. Also
-                    a huge fan of semantics and futuristic interfaces.</p>
-                <hr class="star-bright"/>
-                <span class="skills">Web Developer & Usability Artist</span>
-            </div>
-
-            <img src="./images/dennisxiao.jpg" alt="Dennis Xiao | Web Developer | Software Developer"
-                 title="Dennis Xiao | Web Developer | Software Developer"/>
-        </header>
-
-        <!-- portfolio section -->
-        <section id="portfolio">
-            <h2>Project Portfolio</h2>
-            <hr class="star-dark"/>
-            <ul class="grid">
-                <li>
-                    <a href="http://taylorscollege.edu.au/" target="_blank">
-                        <img src="./images/project1.jpg" alt="Taylors College" title="Taylors College"/>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://isc.flinders.edu.au/" target="_blank">
-                        <img src="./images/project2.jpg" alt="Flinders University" title="Flinders University"/>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://www.afy.ac.nz/" target="_blank">
-                        <img src="./images/project3.jpg" alt="The University of Auckland Foundation"
-                             title="The University of Auckland Foundation"/>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://www.taylorsperth.edu.au/" target="_blank">
-                        <img src="./images/project4.jpg" alt="The University of Western Australia Foundation"
-                             title="The University of Western Australia Foundation"/>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://www.csustudycentres.edu.au/" target="_blank">
-                        <img src="./images/project5.jpg" alt="Charles Sturt University" title="Charles Sturt University"/>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://www.csustudycentres.edu.au/china/accounting" target="_blank">
-                        <img src="./images/project6.jpg" alt="Charles Sturt University landing page"
-                             title="Charles Sturt University landing page"/>
-                    </a>
-                </li>
-            </ul>
-        </section>
-
-        <!-- Contact Section-->
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <hr class="star-dark"/>
-            <div>
-                <!-- novalidate attribute indicates the form is not to be validated on submit -->
-                <form id="contactForm" novalidate action="MAILTO:dennisboys@gmail.com" method="post" enctype="text/plain">
-                    <div class="form-item">
-                        <label for="name">Name</label>
-                        <input id="name" type="text" placeholder="Name" required=""/>
-                    </div>
-                    <div class="form-item">
-                        <label for="email">Email Address</label>
-                        <input id="email" type="email" placeholder="Email Address" required=""/>
-                    </div>
-                    <div class="form-item">
-                        <label for="message">Message</label>
-                        <textarea id="message" rows="4" placeholder="Message" required=""></textarea>
-                    </div>
-                    <br/>
-                    <button type="submit">Send</button>
-                </form>
-                <div>
-                    <p>Hey bros!</p>
-                    <p>Want to get in touch with me? Be it to request more info about myself or my experience, to ask for my
-                        resume, tips on your assignments, random questions about the universe and the meaning of life, or
-                        even if only for a geek talk in the sunny Sydney... just feel free to drop me a line
-                        anytime.</p>
-                    <p>I promise to reply A.S.A.P.</p>
-                    <p>Note: No spam plz :)</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Scroll to Top Button (Only supposed to be visible on small and small screen sizes)-->
-        <div class="scroll-top">
-            <a href="#top" class="button scrollable"><i class="fa fa-chevron-up"></i></a>
+<main>
+    <!-- self-introduction section -->
+    <header>
+        <div class="intro-text">
+            <p>I'm Dennix Xiao, an enthusiastic coder with extensive practical experience in web development, product
+                management and project management; devoted to Imperative Programming and Information Architecture. Also
+                a huge fan of semantics and futuristic interfaces.</p>
+            <hr class="star-bright"/>
+            <span class="skills">Web Developer & Usability Artist</span>
         </div>
-    </main>
+
+        <img src="./images/dennisxiao.jpg" alt="Dennis Xiao | Web Developer | Software Developer"
+             title="Dennis Xiao | Web Developer | Software Developer"/>
+    </header>
+
+    <!-- portfolio section -->
+    <section id="portfolio">
+        <h2>Project Portfolio</h2>
+        <hr class="star-dark"/>
+        <ul class="grid">
+            <li>
+                <a href="http://taylorscollege.edu.au/" target="_blank">
+                    <img src="./images/project1.jpg" alt="Taylors College" title="Taylors College"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://isc.flinders.edu.au/" target="_blank">
+                    <img src="./images/project2.jpg" alt="Flinders University" title="Flinders University"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.afy.ac.nz/" target="_blank">
+                    <img src="./images/project3.jpg" alt="The University of Auckland Foundation"
+                         title="The University of Auckland Foundation"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.taylorsperth.edu.au/" target="_blank">
+                    <img src="./images/project4.jpg" alt="The University of Western Australia Foundation"
+                         title="The University of Western Australia Foundation"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.csustudycentres.edu.au/" target="_blank">
+                    <img src="./images/project5.jpg" alt="Charles Sturt University" title="Charles Sturt University"/>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.csustudycentres.edu.au/china/accounting" target="_blank">
+                    <img src="./images/project6.jpg" alt="Charles Sturt University landing page"
+                         title="Charles Sturt University landing page"/>
+                </a>
+            </li>
+        </ul>
+    </section>
+
+    <!-- Contact Section-->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <hr class="star-dark"/>
+        <div>
+            <!-- novalidate attribute indicates the form is not to be validated on submit -->
+            <form id="contactForm" novalidate action="MAILTO:dennisboys@gmail.com" method="post" enctype="text/plain">
+                <div class="form-item">
+                    <label for="name">Name</label>
+                    <input id="name" type="text" placeholder="Name" required=""/>
+                </div>
+                <div class="form-item">
+                    <label for="email">Email Address</label>
+                    <input id="email" type="email" placeholder="Email Address" required=""/>
+                </div>
+                <div class="form-item">
+                    <label for="message">Message</label>
+                    <textarea id="message" rows="4" placeholder="Message" required=""></textarea>
+                </div>
+                <br/>
+                <button type="submit">Send</button>
+            </form>
+            <div>
+                <p>Hey bros!</p>
+                <p>Want to get in touch with me? Be it to request more info about myself or my experience, to ask for my
+                    resume, tips on your assignments, random questions about the universe and the meaning of life, or
+                    even if only for a geek talk in the sunny Sydney... just feel free to drop me a line
+                    anytime.</p>
+                <p>I promise to reply A.S.A.P.</p>
+                <p>Note: No spam plz :)</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Scroll to Top Button (Only supposed to be visible on small and small screen sizes)-->
+    <div class="scroll-top">
+        <a href="#top" class="button scrollable"><i class="fa fa-chevron-up"></i></a>
+    </div>
+</main>
 
 </body>
 
