--- a/projects/quote/quoteoftheday.html
+++ b/projects/quote/quoteoftheday.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="./mystyle.css">
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
     <!-- jQuery UI -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
