modified jane farewell project and made a few copy changes

--- a/projects/jane/jane.html
+++ b/projects/jane/jane.html
@@ -9,16 +9,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Latest compiled and minified CSS -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"-->
-          <!--integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
-    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- CSS by Dennis -->
     <link rel="stylesheet" type="text/css" href="./mystyle.css">
 
     <!-- jQuery -->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
-    <script src="./jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
     <!-- JS by Dennis -->
     <script src="./myscripts.js"></script>
@@ -34,18 +32,19 @@
 <body class="text-center">
 
     <video poster="images/profile1.jpg" id="bgvid">
-        <source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">
+        <source src="jane.mp4" type="video/mp4">
     </video>
 
     <div id="jane">
         <h1>time to say bye / hi</h1>
-        <p>Directed by Carol Chen</p>
-        <p>Casting: Dennis, Nina, Denny</p>
-        <p>Hi Jane，还记得1年前的一次SG火锅聚会中，你有意无意提到让我来澳洲发展，听完你一席话（其实好像就几句），我立马收拾行囊拖家带口来到这陌生的角度 -- 细思恐极啊！</p>
-        <p>Professionally，你无得弹，用左唔够5分钟就为SG增加了一个NSE！我林呢个记录前无古人，后都应该没来者了。XD</p>
-        <p>Personally，你开启了我另一片天空，现在我无需VPN可以畅游Google & Youtube，压抑多年的求知欲集中爆发了，太爽了。</p>
+        <p>Directed by Study Group</p>
+        <p>Casting: Annie, Selina, Yina, 嘉乐, <span style="font-size: 2em; font-weight: bold;">马总</span>, Dennis, Denny, Carol, Emily, Wendy... and many many more！</p>
+        <p>=============== Dennis专用分割线 ===============</p>
+        <p>Hi Jane，马上要见到你了，我就不录视频啦！还记得1年前的一次SG火锅聚会中，你提到让我来澳发展，听完你一席话（其实好像就几句），我立马收拾行囊拖家带口来到这陌生的角度 -- 细思恐极啊！</p>
+        <p>嗯，所以我一直认为你是最pro滴，用左唔够5分钟就为SG增加了一个NSE！我林呢个记录前无古人，后都应该没来者了。XD</p>
+        <p>唔讲太多，SG剧场开播！</p>
+        <p>BTW... 从几时起SG开始有这个video farewell传统的？LOL</p>
         <p>Thank you and see you soon!</p>
-
         <button>Play</button>
         <p>请按F11获得最佳观影效果</p>
         <div style="font-size: .8em"><em>By <a href="http://www.dennisxiao.com/index.php" target="_blank">Dennis Xiao</a></em></div>
