updated wikipedia project, added random article button

--- a/projects/wikipedia-viewer/index.html
+++ b/projects/wikipedia-viewer/index.html
@@ -27,6 +27,7 @@
         <input type="text" name="searchWord" id="searchWord" placeholder="Type your search term here..."><br />
 
         <input type="button" id="searchButton" value="Search">
+        <a href="https://en.wikipedia.org/wiki/Special:Random" class="button" target="_blank">I'm Feeling Lucky</a>
 
         <ul id="searchResult"></ul>
 
